--- a/principalModulo/templates/login.html
+++ b/principalModulo/templates/login.html
@@ -32,7 +32,7 @@
         <h3>Sistema Integral de Gestión para el</h3>
         <h3>Procesamiento de Café</h3>
 
-        <form>
+        <form id="formulario">
           <label for="usuario">Usuario</label>
           <input type="text" id="usuario"/>
 
@@ -45,5 +45,6 @@
     </div>
   </div>
 
+<script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
