--- a/principalModulo/templates/home.html
+++ b/principalModulo/templates/home.html
@@ -32,7 +32,7 @@
     <main class="principal">
     <nav id="menuNav">
         <a href="{% url 'inicio' %} " style="text-decoration: none; color: inherit;">
-        <div class="op" onclick="alert">
+        <div class="op" onclick="alert" id="aqui">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
                 <path d="M9.77961 23.4989V15.9937H15.2144V23.4989C15.2144 24.3245 15.8258 25 16.573 25H20.6491C21.3964 25 22.0078 24.3245 22.0078 23.4989V12.9916H24.3175C24.9425 12.9916 25.2414 12.136 24.7659 11.6857L13.4073 0.382768C12.891 -0.127589 12.103 -0.127589 11.5867 0.382768L0.228058 11.6857C-0.233895 12.136 0.0514289 12.9916 0.676424 12.9916H2.98619V23.4989C2.98619 24.3245 3.5976 25 4.34487 25H8.42093C9.1682 25 9.77961 24.3245 9.77961 23.4989Z" fill="#003300"/>
             </svg>
